<resources>
  <string name="app_name">TodoList</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="check_image_description">check_image</string>
  <string name="title_et_hint">Title</string>
  <string name="text_et_hint">Text</string>
  <string name="priority">Приоритет</string>
  <string name="priority_normal_radiobutton">Нормальный</string>
  <string name="priority_low_radiobutton">Низкий</string>
  <string name="priority_high_radiobutton">Высокий</string>
  <string name="delete_text_btn">Удалить</string>
  <string name="save_text_btn">Сохранить</string>
  <string name="list_is_empty_tv">List is empty</string>
  <string name="add_item_title">Добавить</string>
  <string name="edit_item_title">Изменить</string>
  <string name="todo_list_title">Список задач</string>
  <string name="sort_by_date_title">Sort by Date</string>
  <string name="sort_by_priority_title">Sort by Priority</string>
</resources>